# BlockChain

./: CMakeLists.txt  README.md
src/: main.cpp
src/blockchain/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Mine.cpp  Mine.h
src/core/: Context.h  Hash.cpp  Hash.h  Random.cpp  Random.h  Timer.h
src/trx/: Trx.cpp  Trx.h  TrxGen.cpp  TrxGen.h  TrxPool.cpp  TrxPool.h
src/user/: User.cpp  User.h  UserGen.cpp  UserGen.h
